[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"
stylist = { version = "0.10.1", features = ["yew_integration"] }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlFormElement", "HtmlInputElement"] }
yew = "0.19.3"
